# wheretolive

./: .cookiecutter.json  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  addresses.json.j2  ansible.cfg  codecov.yml  coordinates.json.j2  env.j2  hosts  noxfile.py  places.json.j2  pyproject.toml  setup.yml  setup_environment.sh  vars.yml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: constraints.txt  release.yml  scraper-lint-and-test.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
notebooks/: 01_test_isochrone.ipynb
scraper/: README.md  mypy.ini  noxfile.py  pyproject.toml
scraper/app/: main.py  mls.py  rfaster.py
scraper/docker/: Dockerfile  gunicorn_conf.py
scraper/scripts/: build.sh  lint.sh  test.sh
scraper/src/scraper/: mls.py  rfaster.py
scraper/tests/: conftest.py  test_main.py
scripts/: daily_mls.py  daily_mls.sh  daily_rfaster.py  daily_rfaster.sh  download_listings.py  download_osm_data.py  download_transit_data.py  elevation_readme.md  epoch_tester.sh  make_isochrone.py  tripplanner.sh
scripts/postgis/: candidate_views.sql  candidate_views_rfaster.sql  create_mls.sql  create_mls_stage.sql  create_rfaster.sql  drop_mls.sql  floodzone.py  floodzonemap.sql  grocery_distance.sql  make_candidates.py  mls_commute_syntax.py  mls_wide_table.py  rfaster_commute_syntax.py  rfaster_wide_table.py  setup_db.py  upload_foursquare.py
src/wheretolive/: __init__.py  __main__.py  dropbox_uploader.py  foursquare.py  ingest_mls.py  isochrone.py  logconf.py  mls.py  postgis.py  rfaster.py  setup_isochrone.sql
src/wheretolive/mls/: __init__.py  common.py  ingest.py  parse.py  scrape.py  upload_candidates.py
src/wheretolive/rfaster/: __init__.py  common.py  ingest.py  parse.py  scrape.py  upload_candidates.py
tests/: __init__.py  test_main.py  test_mls.py  test_rfaster.py
